more progress with conf parsing

--- a/abb.conf
+++ b/abb.conf
@@ -1,41 +1,44 @@
-modbus_station_id=10,
-modbus_read_base=5,
+modbus_rtu_baud=9600,
+modbus_station_id=10, 
+modbus_read_base=5, #this is important
 modbus_read_count=6,
-update_frequency_hz=0.1;
+#yeah totally
+update_frequency_hz=3.5;
+
 
 freq
 {
-	name="ABB_OUTPUT_FREQ_HZ",
+	name=ABB_OUTPUT_FREQ_HZ,
 	scale=0.1
 }
 
 current
 {
-	name="ABB_CURRENT_A",
+	name=ABB_CURRENT_A,
 	scale=0.1
 }
 
 voltage
 {
-	name="ABB_VOLTAGE_V",
+	name=ABB_VOLTAGE_V,
 	scale=1
 }
 
 motorspeed
 {
-	name="ABB_MOTORSPEED_RPM",
+	name=ABB_MOTORSPEED_RPM,
 	scale=1
 }
 
 kw
 {
-	name="ABB_KW",
+	name=ABB_KW,
 	scale=0.1
 }
 
 kwh
 {
-	name="ABB_KWH",
+	name=ABB_KWH,
 	scale=0.1
 }
 
