fixed issue with tags & IDs, sneaky dangling pointer. Parsing code now 70-ish% finished

--- a/abb.conf
+++ b/abb.conf
@@ -1,10 +1,35 @@
-modbus_rtu_baud=9600,
-modbus_station_id=10, 
-modbus_read_base=5, #this is important
-modbus_read_count=6,
-#yeah totally
-update_frequency_hz=3.5;
+# All of the options seen here MUST be set. 
+# Otherwise, hopefully, you will get a syntax error-
+# else unexpected behaviour may result.
 
+# baud rate for RTU comms, limited to whatever libmodbus supports
+modbus_rtu_baud=9600,
+
+# modbus station ID (slave address) for abb ach550 
+modbus_station_id=10,
+
+# start of modbus holding reg. range to read from
+modbus_read_base=5,
+
+# no. of registers to read
+modbus_read_count=6,
+
+# frequency, in hertz, at which the registers are read,
+# AND at which the kay-value pairs are written to logfile.
+update_frequency_hz=0.5;
+
+# for each register to be read, you must define 3 things:
+# an ID (string ([a-z], [A-Z], _): only for use within this .conf file)
+# a TAG (string ([a-z], [A-Z], _): This will be the tag for the kay-value pair written to log file)
+# a SCALE value (float: Used to scale the raw values read from the modbus registers).
+# If you don't know the scale value, just set it to 1.
+#
+# The syntax of such definitions is as follows:
+#	ID { name=TAG, scale=SCALE}
+# 
+# The number of these definitions must match the number of registers being read.
+# So, if you have set modbus_read_count to a value of 6, then you must have 6
+# ID definitions below.
 
 freq
 {
