--- a/abb.conf
+++ b/abb.conf
@@ -24,7 +24,7 @@ update_frequency_hz=0.5;
 # a SCALE value (float: Used to scale the raw values read from the modbus registers).
 # If you don't know the scale value, just set it to 1.
 #
-# The syntax of such definitions is as follows:
+# The syntax of such a definition is as follows:
 #	ID { name=TAG, scale=SCALE}
 # 
 # The number of these definitions must match the number of registers being read.
