--- a/abb.conf
+++ b/abb.conf
@@ -1,6 +1,7 @@
 # All of the options seen here MUST be set. 
 # Otherwise, hopefully, you will get a syntax error-
 # else unexpected behaviour may result.
+# all whitespace & comments are ignored.
 
 # baud rate for RTU comms, limited to whatever libmodbus supports
 modbus_rtu_baud=9600,
@@ -66,6 +67,12 @@ kwh
 	name=ABB_KWH,
 	scale=0.1
 }
+
+# finally, you can use your register IDs to describe
+# the layout of key value pairs. The example below shows
+# two key value pairs, the first containing 4 values, and the
+# containing the final 4 values. Each set of curly brackets {}
+# corresponds to a seperate log file & seperate key-value pair.
 
 {freq,current,voltage,motorspeed}
 {kw,kwh}
