added serial port parameter in abb.conf. formatted param printing.

--- a/abb.conf
+++ b/abb.conf
@@ -9,6 +9,9 @@ modbus_rtu_baud=9600,
 # modbus station ID (slave address) for abb ach550 
 modbus_station_id=10,
 
+#path to serial port device node
+modbus_port=/dev/tty0,
+
 # start of modbus holding reg. range to read from
 modbus_read_base=5,
 
