--- a/abb.conf
+++ b/abb.conf
@@ -5,12 +5,12 @@ modbus_read_base=5,
 modbus_read_count=6,
 update_frequency_hz=0.5;
 
-freq       { tag=ABB_OUTPUT_FREQ_HZ, scale=0.1 }
-current    { tag=ABB_CURRENT_A,      scale=0.1 }
-voltage    { tag=ABB_VOLTAGE_V,      scale=1 }
-motorspeed { tag=ABB_MOTORSPEED_RPM, scale=1 }
-kw         { tag=ABB_KW,             scale=0.1 }
-kwh        { tag=ABB_KWH,            scale=0.1 }
+freq       { tag=SENS_ABB_OUTPUT_FREQ_HZ, scale=0.1 }
+current    { tag=SENS_ABB_CURRENT_A,      scale=0.1 }
+voltage    { tag=SENS_ABB_VOLTAGE_V,      scale=1 }
+motorspeed { tag=SENS_ABB_MOTORSPEED_RPM, scale=1 }
+kw         { tag=SENS_ABB_KW,             scale=0.1 }
+kwh        { tag=SENS_ABB_KWH,            scale=0.1 }
 
 {freq,current,voltage,motorspeed,kw,kwh}
 
