added create_periodic function, not using sleep() anymore

--- a/abb.conf
+++ b/abb.conf
@@ -3,7 +3,7 @@ modbus_station_id=10,
 modbus_port=/dev/tty0,
 modbus_read_base=5,
 modbus_read_count=6,
-update_frequency_hz=0.5;
+interval_secs=2;
 
 freq       { tag=SENS_ABB_OUTPUT_FREQ_HZ, scale=0.1 }
 current    { tag=SENS_ABB_CURRENT_A,      scale=0.1 }
