added comments to conf file

--- a/abb.conf
+++ b/abb.conf
@@ -1,16 +1,38 @@
+# the baud rate at which the modbus RTU connection operates.
+# defaults to 9600 if not set here.
 modbus_rtu_baud=9600,
+
+# modbus station ID for modbus RTU slave.
+# defaults to 0 if not set here.
 modbus_station_id=10,
+
+# modbus RTU serial device file.
+# defaults to /dev/null if not set here.
 modbus_port=/dev/tty0,
+
+# address of the start of modbus address space to read.
+# defaults to 0 if not set here.
 modbus_read_base=5,
+
+# number of modbus registers to read, starting from read_base
+# defaults to 1 if not set here.
 modbus_read_count=6,
+
+# path to direcory in which to store logfiles. If not set here,
+# all logging will sent to stdout.
+#log_location=/home/root,
+
+# time in seconds between each tick
+# - each tick reads the modbus registers and writes
+# values to sensordata file. defaults to 2 if not set here.
 interval_secs=2;
 
-freq       { tag=SENS_ABB_OUTPUT_FREQ_HZ, scale=0.1 }
+freq       { tag=SENS_ABB_OUTPUT_FREQ_HZ, scale=0.1 } # read_base
 current    { tag=SENS_ABB_CURRENT_A,      scale=0.1 }
 voltage    { tag=SENS_ABB_VOLTAGE_V,      scale=1 }
 motorspeed { tag=SENS_ABB_MOTORSPEED_RPM, scale=1 }
 kw         { tag=SENS_ABB_KW,             scale=0.1 }
-kwh        { tag=SENS_ABB_KWH,            scale=0.1 }
+kwh        { tag=SENS_ABB_KWH,            scale=0.1 } # read_base + read_count
 
 {freq,current,voltage,motorspeed,kw,kwh}
 
