--- a/abb.conf
+++ b/abb.conf
@@ -25,7 +25,11 @@ modbus_read_count=6,
 # time in seconds between each tick
 # - each tick reads the modbus registers and writes
 # values to sensordata file. defaults to 2 if not set here.
-interval_secs=2;
+interval_secs=2,
+
+# directory inside which to store daemon log file.
+# if not set here, output will be sent to stdout/stderr.
+log_location=/home/root;
 
 freq       { tag=SENS_ABB_OUTPUT_FREQ_HZ, scale=0.1 } # read_base
 current    { tag=SENS_ABB_CURRENT_A,      scale=0.1 }
