--- a/abb.conf
+++ b/abb.conf
@@ -19,17 +19,14 @@ modbus_read_base=5,
 modbus_read_count=6,
 
 # path to direcory in which to store logfiles. If not set here,
-# all logging will sent to stdout.
-#log_location=/home/root,
+# all logging will sent to stdout/stderr.
+log_location=/home/root,
 
 # time in seconds between each tick
 # - each tick reads the modbus registers and writes
 # values to sensordata file. defaults to 2 if not set here.
-interval_secs=2,
+interval_secs=2;
 
-# directory inside which to store daemon log file.
-# if not set here, output will be sent to stdout/stderr.
-log_location=/home/root;
 
 freq       { tag=SENS_ABB_OUTPUT_FREQ_HZ, scale=0.1 } # read_base
 current    { tag=SENS_ABB_CURRENT_A,      scale=0.1 }
