Added conf paramaters for UUID file and sensor logdir

--- a/abb.conf
+++ b/abb.conf
@@ -18,22 +18,31 @@ modbus_read_base=5,
 # defaults to 1 if not set here.
 modbus_read_count=6,
 
-# path to direcory in which to store logfiles. If not set here,
-# all logging will sent to stdout/stderr.
-log_location=/home/root,
+# absolute path to the direcory in which logs should be stored.
+# If not set here, all logging will sent to stdout/stderr.
+log_directory=/home/root,
+
+# absolute path to the directory in which sensor logs should
+# be stored
+sensor_log_directory=/home/sensordata,
 
 # time in seconds between each tick
 # - each tick reads the modbus registers and writes
 # values to sensordata file. defaults to 2 if not set here.
-interval_secs=2;
+interval_secs=2,
 
+# absolute path of the file containing the UUID to be used
+uuid_path=/uuid;
+
+######################## OPTIONAL #########################
 
 freq       { tag=SENS_ABB_OUTPUT_FREQ_HZ, scale=0.1 } # read_base
 current    { tag=SENS_ABB_CURRENT_A,      scale=0.1 }
-voltage    { tag=SENS_ABB_VOLTAGE_V,      scale=1 }
-motorspeed { tag=SENS_ABB_MOTORSPEED_RPM, scale=1 }
+voltage    { tag=SENS_ABB_VOLTAGE_V,      scale=1   }
+motorspeed { tag=SENS_ABB_MOTORSPEED_RPM, scale=1   }
 kw         { tag=SENS_ABB_KW,             scale=0.1 }
 kwh        { tag=SENS_ABB_KWH,            scale=0.1 } # read_base + read_count
 
-{freq,current,voltage,motorspeed,kw,kwh}
+{freq,current,voltage}
+{motorspeed,kw,kwh}
 
