--- a/mbd.conf
+++ b/mbd.conf
@@ -29,7 +29,7 @@ sensor_log_directory=/home/sensordata,
 # time in seconds between each tick
 # - each tick reads the modbus registers and writes
 # values to sensordata file. defaults to 2 if not set here.
-interval_secs=2,
+interval_msecs=200,
 
 # absolute path of the file containing the UUID to be used
 uuid_path=/uuid;
