--- a/mbd.conf
+++ b/mbd.conf
@@ -28,8 +28,12 @@ sensor_log_directory=/home/sensordata,
 
 # time in seconds between each tick
 # - each tick reads the modbus registers and writes
-# values to sensordata file. defaults to 2 if not set here.
+# values to sensordata file. defaults to 1000 if not set here.
 interval_msecs=200,
+
+# number of times to retry if reading modbus registers fails
+# - defaults to 10 if not set here.
+retries=5,
 
 # absolute path of the file containing the UUID to be used
 uuid_path=/uuid;
