Added 'infinity' option for retries. Removed verbose printing of register #'s on every read

--- a/mbd.conf
+++ b/mbd.conf
@@ -1,41 +1,43 @@
-# the baud rate at which the modbus RTU connection operates.
-# defaults to 9600 if not set here.
+# modbus_rtu-baud: The baud rate at which the modbus RTU connection
+# operates. Defaults to 9600 if not set here.
 modbus_rtu_baud=9600,
 
-# modbus station ID for modbus RTU slave.
-# defaults to 0 if not set here.
+# modbus_station_id: The station ID for modbus RTU slave.
+# Defaults to 0 if not set here.
 modbus_station_id=10,
 
-# modbus RTU serial device file.
-# defaults to /dev/null if not set here.
+# modbus_port: The modbus RTU serial port name.
+# Defaults to /dev/null if not set here.
 modbus_port=/dev/tty0,
 
-# address of the start of modbus address space to read.
-# defaults to 0 if not set here.
+# mosbus_read_base: The starting address of the modbus address space
+# to read. Defaults to 0 if not set here.
 modbus_read_base=5,
 
-# number of modbus registers to read, starting from read_base
-# defaults to 1 if not set here.
+# modbus_read_count: The number of modbus registers to read, starting
+# from read_base. Defaults to 1 if not set here.
 modbus_read_count=6,
 
-# absolute path to the direcory in which logs should be stored.
-# If not set here, all logging will sent to stdout/stderr.
+# log_directory: The absolute path to the direcory in which logs should
+# be stored. If not set here, all logging will sent to stdout/stderr.
 log_directory=/home/root,
 
-# absolute path to the directory in which sensor logs should
-# be stored
+# sensor_log_dir: The absolute path to the directory in which sensor
+# logs should be stored. Defaults to '/home/sensordata' if not set here.
 sensor_log_directory=/home/sensordata,
 
-# time in seconds between each tick
-# - each tick reads the modbus registers and writes
-# values to sensordata file. defaults to 1000 if not set here.
+# interval_msecs: Time in milliseconds between each tick.
+# A tick reads the modbus registers and writes
+# values to sensordata file. Defaults to 1000 if not set here.
 interval_msecs=200,
 
-# number of times to retry if reading modbus registers fails
-# - defaults to 10 if not set here.
+# retries: The number of times to retry before aborting if a modbus read fails.
+# enter an integer value for a specific number of retries, or "infinity"
+# to retry indefinitely. Defaults to 10 if not set here.
 retries=5,
 
-# absolute path of the file containing the UUID to be used
+# uuid_path: The absolute path of the file containing the UUID to be used.
+# Defaults to '/uuid' if not set here.
 uuid_path=/uuid;
 
 ######################## OPTIONAL #########################
